FR 2619262 - Adjusted coding style.